<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imgViewBackground_desc"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/imgViewLogo_Desk"
        android:paddingTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/text_view_title"
        android:textColor="@color/colorTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />


    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/buttonFind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewCheck1"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/Check1_Description"
                app:srcCompat="@drawable/check" />

            <TextView
                android:id="@+id/textViewCheck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/text_view_check1"
                android:textColor="@color/colorTitle"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewCheck2"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/Check2_Description"
                app:srcCompat="@drawable/check" />

            <TextView
                android:id="@+id/textViewCheck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/text_view_check2"
                android:textColor="@color/colorTitle"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewCheck3"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/Check3_Description"
                app:srcCompat="@drawable/check" />

            <TextView
                android:id="@+id/textViewCheck3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/text_view_check3"
                android:textColor="@color/colorTitle"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/button_find"
        android:textColor="@color/colorWhite"
        android:onClick="onClickFind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>