<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Rooms">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/imgViewBackground_desc"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />

        <TextView
            android:id="@+id/textViewRoomsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="16dp"
            android:text="@string/text_view_rooms_title"
            android:textColor="@color/colorTitle"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxRooms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_rooms1"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toTopOf="@id/checkBoxRooms2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRoomsTitle" />

        <CheckBox
            android:id="@+id/checkBoxRooms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_rooms2"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toTopOf="@id/checkBoxRooms3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxRooms1" />

        <CheckBox
            android:id="@+id/checkBoxRooms3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_rooms3"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toTopOf="@id/checBoxRooms4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxRooms2" />


        <CheckBox
            android:id="@+id/checBoxRooms4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_rooms4"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toTopOf="@id/checkBoxRooms5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxRooms3" />

        <CheckBox
            android:id="@+id/checkBoxRooms5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_rooms5"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checBoxRooms4" />

        <Button
            android:id="@+id/buttonRoomsNext"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/button_next"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxRooms5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>